--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -13,7 +13,10 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+}
+
+.website-body {
+  flex-grow: 1;
 }
 
 body {
@@ -21,3 +24,32 @@ body {
   overflow: auto;
 }
 
+.body-center {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.body-top {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+#topic-info h1 {
+  font-size: 25px;
+}
+
+#topic-info h2 {
+  font-size: 22px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+#topic-info h4 {
+  font-size: 17px;
+  font-style: italic;
+}
